syntax = "proto3";

package pb;

option go_package = "./;pb";

import "google/protobuf/empty.proto";


message UserInfo {
  int64 Id = 1;
  string Uuid = 2;
  string WxOpenId = 3;
  string Nickname = 4;
  string Email = 6;
  string Phone = 7;
  int64 RoleId = 8;
  string Avatar = 9;
  int64 Status = 10;
  int64 Male = 11;
  int64 Birthday = 12;
  int64 VIPLevel = 13;
  int64 Points = 14;
  int64 CreateTime = 15;
  int64 UpdateTime = 16;
}
message IdReq {
  int64 Id = 1;
}
message UserPageListReq {
  int64 Limit = 1;
  int64 Offset = 2;
}
message UserPageListReply {
  repeated UserInfo List = 1;
  int64 Total = 2;
}
message UserFindByEmailReq {
  string Email = 1;
}
message UserFindByPhoneReq {
  string Phone = 1;
}
message UserCreateReq {
  string Uuid = 2;
  string WxOpenId = 3;
  string Nickname = 4;
  string Email = 6;
  string Phone = 7;
  int64 RoleId = 8;
  string Avatar = 9;
  int64 Male = 11;
  int64 Birthday = 12;
}
message UserIdReply {
  int64 Id = 1;
}

service user {
  rpc userFind (IdReq) returns (UserInfo);
  rpc userCreate (UserCreateReq) returns (UserIdReply);
  rpc userFindByEmail (UserFindByEmailReq) returns (UserInfo);
  rpc userFindByPhone (UserFindByPhoneReq) returns (UserInfo);
  rpc userPageList (UserPageListReq) returns (UserPageListReply) ;
  rpc userDelete (IdReq) returns (google.protobuf.Empty);
}